--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="six">
-        <img src="img/girl.jpeg" alt="Valentine illustration" class="girl-dp" id="imagePath" />
+        <img src="img/girl.jpeg" alt="Valentine illustration" class="girl-dp" />
         <div class="wish">
           <h3 class="wish-hbd">Will You Be My Valentine Cutu</h3>
           <h5 id="wishText">kuch kuch</h5>
